# anp-etl

./: .env  .gitignore  Dockerfile.application  Dockerfile.dashboard  Dockerfile.database  README.md  docker-compose.yml  main.py  pyproject.toml  tox.ini
anp_etl/: download.py  expectations.py  extract.py  load.py  shared.py  transform.py  validation.py
anp_etl/catalog/: tables.json
dashboard/: dashboard.yml  datasource.yml  report.json
database/: database.sql  setup.sh
tests/: test_anp_pipeline.py
validation/checkpoints/: anp_bronze_data_checkpoint.yml
validation/data_docs/local_site/: index.html
validation/data_docs/local_site/expectations/: anp_bronze_data_suite.html
validation/expectations/: .ge_store_backend_id  anp_bronze_data_suite.json
